# pug-rs

./: .gitignore  Cargo.toml  LICENCE.txt  README.md
inputs/: div.pug  head.pug  head_and_body.pug
inputs/dir/: in_folder.pug
inputs/extends/: content.pug  layout.pug
src/: lib.rs  main.rs  utils.rs
