[package]
name = "pug"
version = "0.3.0"
authors = ["Arvid E. Picciani <aep@exys.org>", "undermouse <uundermouse@gmail.com>"]
edition = '2018'
license = "MIT"
description = "Rust implementation of pug template engine."
repository = "https://github.com/uwumouse/pug-rs"
readme = "README.md"
keywords = ["pug", "jade", "template"]
categories = ["command-line-utilities", "parsing", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
notify = "4.0.17"
walkdir = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
